fixed a bug with the map not being interactable; it was the z-index being set to -1

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -30,7 +30,6 @@ body {
 
 /* Trying to get the map container to be underneath the results bar */
 #map {
-    z-index: -1;
     position: relative;
     top: -7rem;
 }
